@@ -7,6 +7,9 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* Session.getHome() get parameter HttpServletRequest,
+	and must return complete url now.
+	This change is not backwards compatible.
 * add AbstractSession
 * LiveServlet.getHome() moves to Session
 	this change is not backwards compatible
